# manor-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_VERSIONING.md  LICENSE  Makefile  OSS_MANIFEST.txt  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/skills/manor-ci-triage/: SKILL.md
.agents/skills/manor-dev-stack-run-verify/: SKILL.md
.agents/skills/manor-doc-maintenance/: SKILL.md
.agents/skills/manor-pr-prep/: SKILL.md
.agents/skills/manor-release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
apps/api/: deps.py  errors.py  main.py  middleware_core.py  web_base.py
apps/api/middleware/: __init__.py  degraded.py  rate_limit.py
apps/api/routers/: activity.py  admin.py  admin_oauth.py  agents.py  api_keys.py  audio.py  auth.py  backup.py  blueprints.py  browser.py  bulk.py  business.py  calendar_settings.py  channel_pairing.py  chat.py  client_errors.py  docgen.py  (+51 more)
apps/web/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/wechat_personal_runner/: ilink_client.py  requirements.txt  runner.py
docker/: Dockerfile.api  Dockerfile.sandbox  Dockerfile.sandbox-service  Dockerfile.web  Dockerfile.web.dev  Dockerfile.wechat-runner  entrypoint.sh  nginx.conf
docker/browser-runner/: Dockerfile  artifact_store.py  entrypoint.sh  login_session.py  runner.py
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: api-reference.md  architecture.md  configuration.md  development.md  docker-compose.md  index.md  installation.md  quickstart.md  security.md  troubleshooting.md
sandbox-service/: config.py  main.py
sandbox-service/api/: routes.py
sandbox-service/sandbox/: docker_backend.py  fs_bridge.py  models.py  scanner.py  security.py  skill_runner.py
scripts/: audit_fs_exposure.py  check_api_versions.py  check_import_structure.py  dev.sh  export_openapi.py  generate_ts_client.sh  init_db.py  smoke_chrome_chat_entry_contract.py  smoke_chrome_chat_service_contract.py  smoke_chrome_mcp_contract.py  smoke_chrome_runtime_harness_contract.py  smoke_chrome_runtime_skill_contract.py  smoke_chrome_zhihu_sequence_contract.py
tests/: auth_helpers.py  conftest.py  dashboard_example_scenarios.py  marketplace_helpers.py  test_2fa.py  test_access_log_redaction.py  test_activity.py  test_admin.py  test_agent_mcp_scope.py  test_agentic_loop_sentinel.py  test_agentic_loop_token_compaction.py  test_agents.py  test_ai_file_permissions.py  test_ai_runtime_skill_contract.py  test_all_tool_and_mcp_smoke.py  test_announcement_markdown.py  test_api_dockerfile_office_deps.py  test_api_keys.py  test_approval_descriptions.py  test_authz.py  test_authz_folder_walkup.py  test_backup.py  test_blueprint_exporter_embedded.py  test_blueprint_installer_embedded.py  test_blueprint_installer_workflows.py  test_blueprint_payload_v11.py  test_blueprint_pricing.py  test_blueprint_report_runtime_evidence.py  test_blueprint_share.py  test_blueprint_v11_e2e.py  test_browser_runner_client.py  test_bulk.py  test_cache.py  test_calendar_settings.py  test_canonical_memory_docs.py  test_capability_output_contract.py  test_celery_runtime.py  test_change_tracker.py  test_channel_inbound_notify.py  test_channel_link.py  (+207 more)
tests/e2e/: conftest.py  test_ai_runtime_docker_smoke.py  test_meta_graph_client.py  test_oauth_flow.py  test_wechat_runner.py
tests/fixtures/: manor_chrome_mcp_test.html
(+311 files in other folders)
